Configure frontend Docker to use .env.build
The frontend Dockerfile now copies `.env.build` as `.env` for its build process, ensuring specific build-time environment variables are used for Prisma operations. The `deploy.sh` script is updated to copy `.env.build` to the project root, making it available for the Docker build context.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /app
 COPY frontend ./
 COPY plan-capabilities.json ./plan-capabilities.json
 # Ensure build uses real env (DATABASE_URL) for Prisma.
-COPY .env ./.env
+COPY .env.build ./.env
 RUN set -a; . ./.env; set +a; \
     npx prisma generate && \
     npx prisma db push
