Refactor frontend build to use DATABASE_URL build arg
Pass `DATABASE_URL` directly as a build argument to the frontend Dockerfile. This removes the reliance on copying a `.env.build` file for Prisma operations during the Docker build process.

This change ensures that `npx prisma generate` and `npx prisma db push` consistently use the correct database URL, improving build reliability and security by avoiding file-based environment injection.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: frontend/Dockerfile
+      args:
+        DATABASE_URL: ${DATABASE_URL}
     env_file:
       - ./.env
     environment:
