feat: Set Status API to allow unauthenticated access by default
Update the `StatusAPIConfig` schema to default `allow_unauthenticated` to `True`. This change is reflected in the `.env.example` file.

--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,7 @@ STATUS_API_ENABLED=true
 STATUS_API_HOST=0.0.0.0
 STATUS_API_PORT=3051
 STATUS_API_CACHE_TTL=5
+STATUS_API_ALLOW_UNAUTHENTICATED=true
 STATUS_API_KEY=
 STATUS_API_PUSH_URL=
 STATUS_API_PUSH_SECRET=
