Update default Status API push and event URLs in .env.example

--- a/.env.example
+++ b/.env.example
@@ -56,10 +56,10 @@ STATUS_API_PORT=3051
 STATUS_API_CACHE_TTL=5
 STATUS_API_ALLOW_UNAUTHENTICATED=true
 STATUS_API_KEY=
-STATUS_API_PUSH_URL=
+STATUS_API_PUSH_URL=http://localhost:3050/api/bot/metrics
 STATUS_API_PUSH_SECRET=
 STATUS_API_PUSH_INTERVAL=30
-STATUS_API_EVENT_URL=
+STATUS_API_EVENT_URL=http://localhost:3050/api/bot/events
 STATUS_API_EVENT_SECRET=
 CONTROL_PANEL_API_ENABLED=true
 CONTROL_PANEL_API_BASE_URL=http://localhost:3050
