--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vectobeat-frontend",
-  "version": "2.0.0-LTS",
+  "version": "2.0.1",
   "private": true,
   "scripts": {
     "build": "next build",
