feat: Implement membership system and donation page
This commit introduces a comprehensive membership system and a dedicated donation page.

Key changes include:
- **Membership System**:
    - Added `membership_commands.py` for bot-side membership management.
    - Integrated membership status and role retrieval across the frontend (account page, profile, various API routes).
    - Introduced `MembershipCard`, `MembershipHistory`, and `MembershipStatus` components.
    - Updated `frontend/lib/memberships.ts` with extensive membership-related utility functions.
    - Modified Prisma schema (`prisma/schema.prisma`) to support membership data.
- **Donation Page**:
    - Added a new `/donate` API route and frontend page.
    - Configured donation-related environment variables (`DONATION_MIN_AMOUNT_CENTS`, `DONATION_MAX_AMOUNT_CENTS`, `DONATION_TITLE`, `DONATION_DESCRIPTION`).
- **General Improvements**:
    - Updated `.env.example` with new Discord public key and donation variables.
    - Adjusted Lavalink configuration in `bot/config.yml` for local development.
    - Added `PartnersLink` to the footer and introduced a `/partners` page.
    - Refactored API credential status handling in `frontend/lib/db.ts` using constants.

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,9 @@ DISCORD_TOKEN=
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 DISCORD_INTERACTIONS_PUBLIC_KEY=
+DISCORD_PUBLIC_KEY=${DISCORD_INTERACTIONS_PUBLIC_KEY}
 NEXT_PUBLIC_DISCORD_CLIENT_ID=
+NEXT_PUBLIC_DISCORD_PUBLIC_KEY=${DISCORD_PUBLIC_KEY}
 
 ##################
 # Frontend / API
@@ -87,6 +89,10 @@ STRIPE_PRICE_SCALE_MONTHLY=
 STRIPE_PRICE_SCALE_YEARLY=
 STRIPE_PRICE_ENTERPRISE_MONTHLY=
 STRIPE_PRICE_ENTERPRISE_YEARLY=
+DONATION_MIN_AMOUNT_CENTS=1
+DONATION_MAX_AMOUNT_CENTS=
+DONATION_TITLE=VectoBeat Donation
+DONATION_DESCRIPTION=Support VectoBeat. Your donation helps cover hosting, moderation, and continued feature development.
 
 # Email / notifications
 SMTP_HOST=
@@ -135,7 +141,7 @@ DB_ROOT_PASSWORD=
 # Lavalink / audio
 CONFIG_PATH=config.yml
 SERVER_PORT=2333
-LAVALINK_NODES=
+LAVALINK_NODES=[{"name":"main","host":"lava-v4.ajieblogs.eu.org","port":443,"password":"https://dsc.gg/ajidevserver","https":true,"region":"eu"}]
 LAVALINK_HOST=
 LAVALINK_PORT=
 LAVALINK_PASSWORD=
