Add Redis dependency to bot service
Ensure Redis is initialized before the bot starts, preventing connection errors.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ services:
     build:
       context: .
       dockerfile: bot/Dockerfile
+    depends_on:
+      - Redis
     env_file:
       - ./.env
     environment:
