--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
     "@react-three/drei": "10.7.6",
     "@react-three/fiber": "9.4.0",
     "@stripe/stripe-js": "^4.1.0",
-    "@vercel/analytics": "1.3.1",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
