Enhance security, standardize URL parsing, and fix base64 encoding
- Harden Dockerfile by setting `vectode` user and ownership for production builds.
- Improve randomness in music track selection using `secrets.SystemRandom`.
- Implement and apply `trimTrailingSlashes` across frontend API routes and utilities for consistent URL handling.
- Correct `base64UrlEncode` in Discord login to properly handle padding characters.

--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -22,6 +22,9 @@ COPY bot/config.yml ./config.yml
 ENV CONFIG_PATH=/app/config.yml
 
 FROM base AS production
+COPY . /app
+RUN chown -R vectode:vectode /app
+USER vectode
 CMD ["python", "-m", "src.main"]
 
 # Development target keeps the same layout but can be used with bind mounts.
