--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "cmdk": "1.0.4",
     "crypto": "latest",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
     "file-type": "^18.7.0",
     "input-otp": "1.4.1",
